[gd_scene load_steps=3 format=3 uid="uid://wave_info_ui"]

[ext_resource type="Script" path="res://scenes/ui/wave_info.gd" id="1_wave"]

[sub_resource type="StyleBoxFlat" id="StyleBox_bg"]
bg_color = Color(0.1, 0.1, 0.1, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_left = 5
corner_radius_bottom_right = 5

[node name="WaveInfo" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -20.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBox_bg")
script = ExtResource("1_wave")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="WaveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wave: 1"
horizontal_alignment = 0
vertical_alignment = 1

[node name="TimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Süre: 00:00"
horizontal_alignment = 0
vertical_alignment = 1

[node name="EnemiesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Düşmanlar: 0"
horizontal_alignment = 0
vertical_alignment = 1


